# final2

./: .env.example  .gitignore  .railwayignore  .vercelignore  CBAM_API_Data_Flow.md  CBAM_LCA_SOLUTION_OVERVIEW.md  CBAM_SOLUTION_OVERVIEW.md  CBAM_개발_작업_방식_가이드.md  CBAM산업.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_LOG.md  Dockerfile.base  Makefile  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_SETUP.md  READMD.md  README.md  README_TEST.md  React_Flow_구현_가이드.md  TEST_GUIDE.md  VERCEL_ENV_SETUP.md  add_foreign_key.py  add_product_attr_em_column.py  add_reporting_year_to_install.py  add_test_material.py  analyze_db_structure.py  analyze_processchain_db.py  analyze_sourcestream_db.py  cal.md  cbam.md  cbam1.md  check-gateway.bat  check_all_schemas.py  check_all_table_structures.py  check_and_fix_db_schema.py  check_current_db_status.py  check_db_status.py  check_db_tables.py  check_edge_structure.py  (+110 more)
frontend/: .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  KAKAO_API_SETUP.md  PWA_README.md  README.md  VERCEL_TRIGGER.md  env.example  jest.config.js  jest.setup.js  jest.setup.ts  jsconfig.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel-cli-setup.md  vercel.json
gateway/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  railway.json  requirements.txt
masterdb/: dummy_db.xlsx  fuel_factor.xlsx  fuel_master.xlsx  hs_cn_mapping.xlsx  material_master.csv  material_master.xlsx  precursor_master.xlsx  시연용(인풋)_CBAM 최종.xlsx
public/: manifest.json  (+2 more)
(+828 files in other folders)
